Re add JEI integration